<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/darkorange"
    android:paddingLeft="20.0dip"
    android:paddingRight="20.0dip" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50.0dip" >

            <TextView
                android:id="@+id/accountNo"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="@string/accountno" />

            <EditText
                android:id="@+id/cdtxtaccno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@color/white"
                android:hint="@string/accountno"
                android:inputType="textAutoComplete" />
        </TableRow>

        <RelativeLayout android:layout_marginTop="10.0dip" >

            <TextView
                android:id="@id/accountinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Account Info"
                android:textSize="20sp"
                android:textColor="@color/holo_green_dark" />

            <ProgressBar
                android:id="@id/paccdetails"
                android:layout_width="wrap_content"
                android:layout_height="25.0dip"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:visibility="gone" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2.0dip"
            android:background="@color/holo_green_dark" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip" >

            <TextView
                android:id="@id/TvAccountName"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="@string/accountname" />

            <TextView
                android:id="@+id/cdtxtaccountname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"                
                android:layout_weight="1.0"
                android:textSize="20sp"
                android:hint="@string/accountname"
                android:textColor="@color/holo_green_dark" />

            <ProgressBar
                android:id="@id/paccname"
                android:layout_height="25.0dip"
                android:layout_gravity="right"
                android:visibility="gone" />
        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2.0dip"
            android:layout_marginTop="20.0dip"
            android:background="@color/holo_green_dark" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip" >

            <TextView
                android:id="@id/TVAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/amount" />

            <EditText
                android:id="@+id/cdtxtamount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@color/white"
                android:hint="@string/amount"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip" >

            <TextView
                android:id="@+id/TvDepositorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Deposit By:" />

            <EditText
                android:id="@+id/cdtxtdepositor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@color/white"
                android:capitalize="words"
                android:hint="Depositor Name"
                android:inputType="textAutoComplete" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip" >

            <TextView
                android:id="@+id/tvtelphone"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="@string/telephone" />

            <EditText
                android:id="@+id/cdtxttelephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@color/white"
                android:hint="@string/telephone"
                android:maxLength="10"
                android:inputType="phone" />
        </TableRow>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:gravity="right"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/cdBtnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="50.0dip"
                android:text="Cancel" />

            <Button
                android:id="@+id/cdBtnConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_alignParentTop="true"
                android:text="Confirm" />
        </LinearLayout>
    </TableLayout>

</ScrollView>