<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/darkorange"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="500.0dip" >

            <RelativeLayout android:layout_marginTop="10.0dip" >

                <TextView
                    android:id="@id/accountinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Transfer From:"
                    android:textColor="@color/holo_green_dark"
                    android:textSize="20sp" />

                <ProgressBar
                    android:id="@id/paccdetails"
                    android:layout_width="wrap_content"
                    android:layout_height="25.0dip"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:visibility="gone" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2.0dip"
                android:background="@color/holo_green_dark" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip" >

                <TextView
                    android:id="@id/NationalId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Nationalid"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/cttxtnationalid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@color/white"
                    android:hint="@string/Nationalid"
                    android:maxLength="8"
                    android:inputType="textAutoComplete" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip" >

                <TextView
                    android:id="@id/AccountNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accountno"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/cttvtxtaccountno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="@string/accountno"
                    android:textColor="@color/holo_green_dark"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip" >

                <TextView
                    android:id="@id/TvAccountName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accountname"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/cttxtaccountname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="@string/accountname"
                    android:textColor="@color/holo_green_dark"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="20.0dip" >

                <TextView
                    android:id="@+id/tvbalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Acct. Balance:"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/ctAccountBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="Acct. Bal"
                    android:textColor="@color/holo_green_dark"
                    android:textSize="20sp" />

                <ProgressBar
                    android:id="@id/paccname"
                    android:layout_height="25.0dip"
                    android:layout_gravity="right"
                    android:visibility="gone" />
            </TableRow>

            <RelativeLayout android:layout_marginTop="10.0dip" >

                <TextView
                    android:id="@+id/daccountinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Transfer To:"
                    android:textColor="@color/holo_green_dark"
                    android:textSize="20sp" />

                <ProgressBar
                    android:id="@+id/pacc2details"
                    android:layout_width="wrap_content"
                    android:layout_height="25.0dip"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:visibility="gone" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2.0dip"
                android:background="@color/holo_green_dark" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip" >

                <TextView
                    android:id="@+id/DaccountNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accountno"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/ctTotxtDaccountNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@color/white"
                    android:hint="@string/accountno"
                    android:inputType="textAutoComplete" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip" >

                <TextView
                    android:id="@+id/TvDAccountName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accountname"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/ctTotxtDaccountname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="@string/accountname"
                    android:textColor="@color/holo_green_dark"
                    android:textSize="20sp" />
            </TableRow>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2.0dip"
                android:layout_marginTop="20.0dip"
                android:background="@color/holo_green_dark" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip" >

                <TextView
                    android:id="@id/TVAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/cttxtamount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@color/white"
                    android:hint="@string/amount"
                    android:inputType="number" />
            </TableRow>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.0dip"
                android:gravity="end"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/ctBtnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50.0dip"
                    android:layout_marginRight="50.0dip"
                    android:text="Cancel"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/ctBtnConfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Confirm"
                    android:textSize="20sp" />
            </LinearLayout>
        </TableLayout>
    </ScrollView>

</RelativeLayout>